admin can modify order

--- a/printcetnrum_web.client/src/app/orders/all-orders-list/all-orders-list.component.html
+++ b/printcetnrum_web.client/src/app/orders/all-orders-list/all-orders-list.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="order-actions">
       <button class="btn btn-primary" (click)="viewOrderDetails(order.id)">View Details</button>
-      <button class="btn btn-secondary">Mark as Completed</button>
+      <button class="btn btn-secondary" (click)="markOrderAsCompleted(order.id)">Mark as Completed</button>
       <button class="btn btn-danger" (click)="deleteOrder(order.id)">Delete</button>
     </div>
   </div>
