--- a/printcetnrum_web.client/src/app/navbar/navbar.component.css
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.css
@@ -1,9 +1,14 @@
 /*navbar is from
     https://github.com/chrisira/angular17-responsive-header
 */
+/* Make the navbar fixed at the top */
 header {
   padding: 10px;
   background: var(--printcentrum-blue);
+  position: fixed; /* Fix the navbar to the top */
+  width: 100%; /* Make sure it spans the full width */
+  top: 0; /* Align at the top of the page */
+  z-index: 1000; /* Make sure it stays on top of other elements */
 }
 
 .logo {
@@ -18,33 +23,32 @@ header {
   margin-top: 24px;
 }
 
-.desktop_menu ul {
-  padding: 0;
-  margin: 0;
-  text-align: left;
-}
+  .desktop_menu ul {
+    padding: 0;
+    margin: 0;
+    text-align: left;
+  }
 
-.desktop_menu ul li {
-  list-style-type: none;
-  color: white;
-  display: inline-block;
-  font-size: 18px;
-  margin-left: 26px;
-}
+    .desktop_menu ul li {
+      list-style-type: none;
+      color: white;
+      display: inline-block;
+      font-size: 18px;
+      margin-left: 26px;
+    }
 
-.desktop_menu ul li:hover {
-  font-size: 19px;
-  font-weight: bold;
-  cursor: pointer;
-  color: yellow;
-  transition: 0.3s ease-in-out;
-}
+      .desktop_menu ul li:hover {
+        font-size: 19px;
+        font-weight: bold;
+        cursor: pointer;
+        color: yellow;
+        transition: 0.3s ease-in-out;
+      }
 
 .menu-icon {
   display: none;
   padding-right: 10px;
 }
-
 
 @media screen and (min-width: 128px) and (max-width: 900px) {
   header {
@@ -61,26 +65,31 @@ header {
     height: 100%;
   }
 
-  .desktop_menu ul li {
-    display: block;
-    text-align: left;
-    margin: 0;
-    padding: 10px 0 10px 26px;
-    border-bottom: 1px solid grey;
-  }
+    .desktop_menu ul li {
+      display: block;
+      text-align: left;
+      margin: 0;
+      padding: 10px 0 10px 26px;
+      border-bottom: 1px solid grey;
+    }
 
   .menu-icon {
-    display: block; 
-    color: white; 
-    font-size: 40px; 
-    padding: 10px; 
-    position: absolute; 
-    right: 10px; 
-    top: 10px; 
+    display: block;
+    color: white;
+    font-size: 40px;
+    padding: 10px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
   }
 
   .mobile_menu {
     right: 0;
     transition: 0.4s ease-in-out;
   }
+}
+
+
+body {
+  padding-top: 64px; 
 }
