display user name on mobile navbar

--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -25,10 +25,13 @@
             <li *ngIf="!isLoggedIn()" [routerLink]="['/register']">Register</li>
             <li *ngIf="isLoggedIn()" (click)="onLogout()">Logout</li>
           </ul>
+          <div *ngIf="isLoggedIn()" class="user-name-mobile">
+            Welcome, {{ userNameSignal() }}!
+          </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-3 col-3 text-right">
-        <span *ngIf="isLoggedIn()">Welcome, {{ userNameSignal() }}!</span>
+        <span *ngIf="isLoggedIn()" class="user-name">Welcome, {{ userNameSignal() }}!</span>
       </div>
     </div>
   </div>
