--- a/printcetnrum_web.client/src/app/navbar/navbar.component.css
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.css
@@ -1,14 +1,13 @@
 /*navbar is from
     https://github.com/chrisira/angular17-responsive-header
 */
-/* Make the navbar fixed at the top */
 header {
   padding: 10px;
   background: var(--printcentrum-blue);
-  position: fixed; /* Fix the navbar to the top */
-  width: 100%; /* Make sure it spans the full width */
-  top: 0; /* Align at the top of the page */
-  z-index: 1000; /* Make sure it stays on top of other elements */
+  position: fixed; 
+  width: 100%; 
+  top: 0; 
+  z-index: 1000; 
 }
 
 .logo {
@@ -18,6 +17,10 @@ header {
   .logo:hover {
     cursor: pointer;
   }
+
+.desktop_menu:not(.mobile_menu) .user-name-mobile {
+  display: none;
+}
 
 .desktop_menu {
   margin-top: 24px;
@@ -87,9 +90,37 @@ header {
     right: 0;
     transition: 0.4s ease-in-out;
   }
-}
 
+
+  .user-name-mobile {
+    margin-top: 20px; 
+    color: white;
+    padding: 10px 20px;
+    text-align: left; 
+    background-color: #2c4a8c;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .user-name {
+    display: none;
+  }
+}
 
 body {
-  padding-top: 64px; 
+  padding-top: 64px;
 }
+
+.user-name {
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #3B62D9;
+  padding: 8px 15px;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+}
+
+  .user-name:hover {
+    background-color: #2c4a8c;
+  }
