--- a/printcetnrum_web.client/src/app/orders/all-orders-list/all-orders-list.component.html
+++ b/printcetnrum_web.client/src/app/orders/all-orders-list/all-orders-list.component.html
@@ -1,3 +1,5 @@
+<header></header>
+<body>
 <h2 class="text-center">All Orders</h2>
 
 <div *ngIf="orders.length === 0" class="alert alert-info text-center">
@@ -31,4 +33,4 @@
     </div>
   </div>
 </div>
-
+</body>
