--- a/printcetnrum_web.client/src/app/orders/order-details/order-details.component.html
+++ b/printcetnrum_web.client/src/app/orders/order-details/order-details.component.html
@@ -1,3 +1,4 @@
+<body>
 <h2 class="text-center">Order Details</h2>
 
 <div *ngIf="order">
@@ -74,3 +75,4 @@
 <div *ngIf="!order" class="alert alert-warning">
   Loading order details...
 </div>
+</body>
