--- a/printcetnrum_web.client/src/app/pages/upload-photo-page/upload-photo-page.component.html
+++ b/printcetnrum_web.client/src/app/pages/upload-photo-page/upload-photo-page.component.html
@@ -1,3 +1,5 @@
+<header> </header>
+<body>
 <div class="upload-container">
   <h1 class="title">Upload Files</h1>
 
@@ -24,3 +26,4 @@
     <p>Please select at least one file to upload.</p>
   </div>
 </div>
+</body>
