--- a/printcetnrum_web.client/src/app/pages/user-files/user-files.component.html
+++ b/printcetnrum_web.client/src/app/pages/user-files/user-files.component.html
@@ -1,3 +1,5 @@
+<header></header>
+<body>
 <div class="file-actions-row">
   <button class="btn btn-primary" [routerLink]="['/upload']">Upload New File</button>
   <button class="btn btn-primary" [routerLink]="['/newOrder']">Create New Order</button>
@@ -41,3 +43,4 @@
     <button type="button" class="btn btn-danger" (click)="confirmDelete()">Delete</button>
   </div>
 </ng-template>
+</body>
