--- a/printcetnrum_web.client/src/app/pages/users-list-page/users-list-page.component.html
+++ b/printcetnrum_web.client/src/app/pages/users-list-page/users-list-page.component.html
@@ -6,6 +6,7 @@
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
         <tr>
+          <th scope="col" (click)="sortByUsername()">Username</th>
           <th scope="col" (click)="sortByName()">Name</th>
           <th scope="col" (click)="sortByEmail()">Email</th>
           <th scope="col" (click)="sortByRole()">Role</th>
@@ -14,6 +15,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let user of users">
+          <td>{{ user.userName }}</td>
           <td>{{ user.firstName }} {{ user.lastName }}</td>
           <td>{{ user.email }}</td>
           <td>{{ user.role }}</td>
