save and display correct order prize

--- a/printcetnrum_web.client/src/app/orders/order-details/order-details.component.html
+++ b/printcetnrum_web.client/src/app/orders/order-details/order-details.component.html
@@ -55,7 +55,14 @@
             <td>{{ item.color }}</td>
             <td>{{ item.size }}</td>
             <td>{{ item.paperType }}</td>
-            <td>${{ item.price | number: '1.2-2' }}</td>
+            <td>
+              <input *ngIf="isAdmin"
+                     type="number"
+                     class="form-control"
+                     [(ngModel)]="item.price"
+                     (blur)="updateItemPrice(item)" />
+              <span *ngIf="!isAdmin">${{ item.price | number: '1.2-2' }}</span>
+            </td>
             <td>
               <button class="btn btn-success btn-sm" (click)="downloadFile(item)">Download</button>
               <button *ngIf="isAdmin"
@@ -67,6 +74,7 @@
           </tr>
         </tbody>
       </table>
+
     </div>
   </div>
 
