--- a/printcetnrum_web.client/src/app/orders/new-order/new-order.component.html
+++ b/printcetnrum_web.client/src/app/orders/new-order/new-order.component.html
@@ -1,3 +1,4 @@
+<body>
 <h2 class="text-center">Your Print Order</h2>
 <div class="order-container">
 
@@ -50,3 +51,4 @@
     <button class="btn btn-primary" (click)="submitOrder()">Confirm and Submit Order</button>
   </div>
 </div>
+</body>
