--- a/printcetnrum_web.client/src/app/pages/home-page/home-page.component.html
+++ b/printcetnrum_web.client/src/app/pages/home-page/home-page.component.html
@@ -1,62 +1,60 @@
-<!--theme is based on the Agency theme by Start Bootstrap
-https://github.com/startbootstrap/startbootstrap-agency
-  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Website</title>
+  <title>PrintCentrum Púchov</title>
   <link rel="stylesheet" href="home-page.component.css">
- </head>
+</head>
 <body>
-
+  <!-- Header Section -->
   <header class="masthead">
     <div class="container">
-      <div class="masthead-subheading">Welcome In Our Shop!</div>
-      <div class="masthead-heading text-title-uppercase ">PrintCentrum Púchov</div>
-      <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+      <div class="masthead-subheading">Welcome to Our Printing Shop!</div>
+      <div class="masthead-heading text-title-uppercase">PrintCentrum Púchov</div>
+      <a class="btn btn-primary btn-xl text-uppercase" href="#services">Discover Our Services</a>
     </div>
   </header>
 
+  <!-- Services Section -->
   <section class="page-section" id="services">
     <div class="container">
       <div class="text-center">
-        <h2 class="section-heading text-uppercase">Services</h2>
-        <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        <h2 class="section-heading text-uppercase">Our Services</h2>
+        <h3 class="section-subheading text-muted">High-quality solutions tailored to your printing needs.</h3>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-print fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="my-3">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="my-3">Document Printing</h4>
+          <p class="text-muted">We offer precision printing for all document types, including A4 and large formats.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-image fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="my-3">Responsive Design</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="my-3">Photo Printing</h4>
+          <p class="text-muted">Bring your memories to life with vibrant, high-resolution photo prints.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-copy fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="my-3">Web Security</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="my-3">Copy Services</h4>
+          <p class="text-muted">Fast and affordable copying for black-and-white and color documents.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <button mat-icon-button class="go-to-top" (click)="scrollToTop()">
+  <!-- Scroll to Top Button -->
+  <button class="go-to-top" (click)="scrollToTop()">
     <mat-icon>arrow_upward</mat-icon>
   </button>
-
 </body>
 </html>
